# -*- Makefile -*-
#
#

ACLOCAL_AMFLAGS = -I config

SUBDIRS = \
	src

install-exec-hook:
	$(SST_REGISTER_TOOL) SST_ELEMENT_LIBRARY SST_ELEMENT_LIBRARY_LIBDIR=$(pkglibdir)

EXTRA_DIST = \
	autogen.sh \
	CONTRIBUTING.md \
	CONTRIBUTORS.TXT \
	INSTALL \
	ISSUES \
	LICENSE \
	PLATFORMS \
	README.md \
	VERSION
