# -*- Makefile -*-
#
#

ACLOCAL_AMFLAGS = -I config

SUBDIRS = \
	src

install-exec-hook:
	$(SST_REGISTER_TOOL) SST_ELEMENT_LIBRARY SST_ELEMENT_LIBRARY_SOURCE_ROOT=$(abs_srcdir)
	$(SST_REGISTER_TOOL) SST_ELEMENT_LIBRARY SST_ELEMENT_LIBRARY_HOME=$(prefix)
	$(SST_REGISTER_TOOL) SST_ELEMENT_LIBRARY SST_ELEMENT_LIBRARY_BINDIR=$(prefix)/bin
	$(SST_REGISTER_TOOL) SST_ELEMENT_LIBRARY SST_ELEMENT_LIBRARY_LIBDIR=$(pkglibdir)

EXTRA_DIST = \
	config \
	autogen.sh \
	CONTRIBUTING.md \
	CONTRIBUTORS.TXT \
	INSTALL \
	ISSUES \
	LICENSE \
	PLATFORMS \
	README.md \
	VERSION
